--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+    <script src="app.js" defer></script>
     <style>
+      * {
+        text-decoration: none;
+      }
       body {
         box-sizing: border-box;
         scroll-behavior: smooth;
@@ -42,7 +47,26 @@
   </head>
   <body>
     <!-- header -->
-    <ul class="nav justify-content-center">
+
+    <nav id="nav">
+      <img src="images/github-img.png" alt="" class="logo" width="35">
+      <input type="checkbox" id="check">
+      <label for="check" >
+          <img src="images/menu-img.png" id="btn" width="55" alt="menu">
+          <img src="images/cancel-img.png" id="cancel" width="45" alt="cancel">
+      </label>
+       <div class="sidebar">
+          <ul class="list-unstyled">
+              <li><a href="#" class="tb">Home</a></li>
+              <li><a href="#" class="tb">About Me</a></li>
+              <li><a href="#" class="tb">Services</a></li>
+              <li><a href="#" class="tb">Projects</a></li>
+              <li><a href="#" class="tb">Contact Me</a></li>
+          </ul>
+       </div> 
+    </nav>
+
+    <!-- <ul class="nav justify-content-center">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#intro">Home</a>
         </li>
@@ -58,7 +82,7 @@
         <li class="nav-item">
           <a class="nav-link" href="#footer">Contact Me</a>
         </li>
-      </ul>
+      </ul> -->
       <!-- introduction -->
       <div id="intro" class="d-flex justify-content-center mt-5">
         <div class="card  border-0" >
