--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       </div>
       <!-- about me -->
       <div id="about" class="container-fluid col-xxl-8 px-4 py-3">
-        <div class="row flex-lg-row-reverse align-items-between g-5 py-5">
+        <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
           <div class="col-1 col-sm-8 col-lg-6 env">
             <img src="images/envelopes.jpg" class="d-block img-fluid" width="65%" alt="Bootstrap Themes"  loading="lazy">
           </div>
