--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
       }
       #about {
         color: white;
-        background: red;
         margin-top: 50px;
         background-repeat: no-repeat;
         background-position: center;
@@ -149,17 +148,17 @@
               <a href="https://kenny14059.github.io/Sneaker-store/" class="text-reset text-decoration-none" >
                 <img src="images/moviesite-img.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <p class="card-text">React Store</p>
+                  <p class="card-text">Moviesite</p>
                 </div>
               </a>
               </div>
             </div>
           <div class="col">
             <div class="card" >
-              <a href="https://kenny14059.github.io/MoviesiteDB/" class="text-reset text-decoration-none" >
-                <img src="images/moviesite-img.png" class="card-img-top" alt="...">
+              <a href="https://github.com/kenny14059/Sneaker-store" class="text-reset text-decoration-none" >
+                <img src="images/sneaker-img.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <p class="card-text">Moviesite</p>
+                  <p class="card-text">React Store</p>
                 </div>
               </a>
               </div>
@@ -177,7 +176,7 @@
           <div class="col">
             <div class="card" >
               <a href="https://github.com/kenny14059/PyShop" class="text-reset text-decoration-none" >
-                <img src="images/pyshop-img.png" class="card-img-top "  alt="...">
+                <img src="images/pyshop-img2.png" class="card-img-top "  alt="...">
                 <div class="card-body">
                   <p class="card-text">Django Admin</p>
                 </div>
